# brisk

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
HelloBrisk/: brisk.toml
HelloBrisk/.build/debug/: HelloBrisk
HelloBrisk/.build/debug/HelloBrisk.app/Contents/: Info.plist
HelloBrisk/.build/debug/HelloBrisk.app/Contents/MacOS/: HelloBrisk
HelloBrisk/.build/debug/HelloBrisk.dSYM/Contents/: Info.plist
HelloBrisk/.build/debug/HelloBrisk.dSYM/Contents/Resources/DWARF/: HelloBrisk
HelloBrisk/.build/debug/HelloBrisk.dSYM/Contents/Resources/Relocations/aarch64/: HelloBrisk.yml
HelloBrisk/Sources/: ContentView.swift
examples/HelloBrisk/.build/debug/HelloBrisk.dSYM/Contents/Resources/DWARF/: HelloBrisk
examples/HelloBrisk/Sources/: App.swift
examples/assets/: brisk.toml
examples/assets/Sources/: App.swift
examples/basic/: brisk.toml
examples/basic/Sources/: App.swift  ContentView.swift
examples/basic/Tests/: SmokeTests.swift
examples/xctest/: brisk.toml
examples/xctest/Sources/: App.swift  Greeter.swift
examples/xctest/Tests/: GreeterTests.swift
src/: cmd.rs  config.rs  direct.rs  main.rs  ui.rs  version.rs  xcode.rs
